--- a/home.css
+++ b/home.css
@@ -87,7 +87,13 @@ a.here:link{
 	text-align: center;
 }
 
-	
+.icon-row {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px; 
+	margin-top: 10px;
+}	
 #linkedin{
 	height: 20%;
 	width: 20%;
@@ -107,7 +113,20 @@ a.here:link{
 	text-align: center;
 	margin-left: 42%;
 
-	}
+}
+
+#hackerrank {
+	height: 20%;
+	width: 20%;
+	background-image: url('images/hackerrank-grey.png');
+	background-size: 100%;
+	background-repeat: no-repeat;
+	text-align: center;
+}
+
+#hackerrank:hover {
+	background-image: url("images/hackerrank-color.png");
+}
 #email{
 	height: 20%;
 	width: 20%;
