--- a/home.css
+++ b/home.css
@@ -88,27 +88,29 @@ a.here:link{
 }
 
 .icon-row {
-	display: inline-block;
-	justify-content: center;
-	align-items: center;
-	gap: 5px; 
-	margin-top: 5px;
-}	
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3%;              /* space between icons */
+  width: 100%;
+  margin-top: 10px;
+}
+
 #linkedin{
-	height: 20%;
-	width: 20%;
+	height: 10%;
+	width: 10%;
 	background-image: url('images/linkedin-grey.png');
-	background-size: 100%;
+	background-size: contain;
 	background-repeat: no-repeat;
 	text-align: center;
 	margin-left: 10%;
 	
 }
 #linkedin:hover {
-	height: 20%;
-	width: 20%;
+	height: 10%;
+	width: 10%;
 	background-image: url("images/linkedin-color.png");
-	background-size: 100%;
+	background-size: contain;
 	background-repeat: no-repeat;
 	text-align: center;
 	margin-left: 10%;
@@ -116,10 +118,10 @@ a.here:link{
 }
 
 #hackerrank {
-	height: 20%;
-	width: 20%;
+	height: 10%;
+	width: 10%;
 	background-image: url('images/hackerrank-grey.png');
-	background-size: 100%;
+	background-size: contain;
 	background-repeat: no-repeat;
 	text-align: center;
 }
