--- a/home.css
+++ b/home.css
@@ -95,7 +95,7 @@ a.here:link{
 	background-size: 100%;
 	background-repeat: no-repeat;
 	text-align: center;
-	margin-left: 10%;
+	margin-left: 42%;
 	
 }
 #linkedin:hover {
@@ -105,7 +105,7 @@ a.here:link{
 	background-size: 100%;
 	background-repeat: no-repeat;
 	text-align: center;
-	margin-left: 10%;
+	margin-left: 42%;
 
 }
 
@@ -116,7 +116,8 @@ a.here:link{
 	background-size: 100%;
 	background-repeat: no-repeat;
 	text-align: center;
-	margin-left: 10%;
+	margin-left: 42%;
+	margin-top: 12%;
 }
 
 #hackerrank:hover {
